<resources>
    <string name="app_name">FedUniStudentAttendance30395619</string>
    <string name="wednesday">Wednesday</string>
    <string name="send">Submit</string>
    <string name="start_time">start_time</string>
    <string name="title">title</string>
    <string name="the_class_is_scheduled_every_monday">The class is scheduled every Monday.</string>
    <string name="add_student">add student</string>
    <string name="save">Save</string>
    <string name="id">User ID</string>
    <string name="account">Account :</string>
    <string name="reg">register</string>
    <string name="appname">Curriculum management</string>
    <string name="password">Password:</string>
    <string name="input_pwd">Please enter password</string>
    <string name="psw_again">Please enter your password again</string>
    <string name="back">Back</string>
    <string name="add_stu">Add a student</string>
    <string name="input_id">Please enter the student ID</string>
    <string name="input_name">Please enter the student name</string>
    <string name="press">Cancel</string>
    <string name="ok">OK</string>
    <string name="test_str">name</string>
    <string name="test_str2">end_time：</string>
    <string name="test_id">id:11111</string>
    <string name="attend">Attend</string>
    <string name="noattend">Not Attend</string>
    <string name="delete_class">delete class</string>
    <string name="check_time">check time</string>
    <string name="please">Please agree to user privacy</string>

    <string-array name="weeks">
        <item>Week 1</item>
        <item>Week 2</item>
        <item>Week 3</item>
        <item>Week 4</item>
        <item>Week 5</item>
        <item>Week 6</item>
        <item>Week 7</item>
        <item>Week 8</item>
        <item>Week 9</item>
        <item>Week 10</item>
        <item>Week 11</item>
        <item>Week 12</item>
    </string-array>
</resources>