<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:background="#fff"
        app:cardBackgroundColor="#fff"
        app:cardCornerRadius="15dp"
        app:cardElevation="10dp"
        app:rippleColor="#fff">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3">
                <TextView
                    android:id="@+id/tv_class"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#009688"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:text="@string/test_id" />
                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/test_str"
                    android:textColor="#000"
                    android:textSize="24dp" />
                <TextView
                    android:id="@+id/tv_isattend"
                    android:layout_width="0dp"
                    android:gravity="center"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/attend" />


            </LinearLayout>


        </LinearLayout>


    </com.google.android.material.card.MaterialCardView>





</LinearLayout>